--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,112 @@
-main {
-  height: calc(100% - 80px);
-  background-color: green;
-  display: flex;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-aside {
-  height: 100%;
-  width: 300px;
+/* MIX */
+.btn {
+  color: #fff;
   background-color: purple;
-  flex-direction: column;
 }
-
-footer {
-  height: 80px;
-  background-color: red;
-}
-
 .page-wrapper {
   height: 100vh;
-  background-color: blue;
+  background-color: #000;
 }
 
-.main-content {
-  height: 100%;
-  width: calc(100%-80px);
-  background-color: pink;
+/* MAIN */
+main {
+  height: calc(100% - 80px);
 }
 
-.upgrade {
+/* Sidebar */
+aside {
   position: fixed;
-  top:0;
-  right: 0;
-  height: 80px;
-  width: auto;
-  background-color: red rgba(255, 0, 0, 0.5);
-  z-index: 1;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 80px);
+  width: 300px;
+  background-color: green;
+}
+.logo {
+  background-color: black;
 }
 
-.aside-bottom {
-  background-color: lightblue;
-  display: flex;
-  width: 300px;
-  bottom: 80px;
-  height: 30px;
+.img-logo{
+  margin: 10px;
+  padding: 10px;
+  height: 60px;
+
+}
+.main-nav {
+  background-color: black;
+  padding:
+}
+
+.home {
+  width: 35px;
+  height: 35px;
+  text-align: center;
+
+}
+
+.link {
+  text-height: 4px;
+  text-align: center;
+  color: white;
+  font-weight: bolder;
+  margin:0px auto;
 }
 
 .secondary-nav {
-
+  height: 100%;
+  overflow: hidden;
+  background-color: lightblue;
+}
+.playlist-title {
+  height: 50px;
+}
+.playlist-list {
+  height: calc(100% - 50px);
+  overflow-y: auto;
+}
+.aside-bottom {
+  height: 80px;
+  flex-shrink: 0;
+  margin-top: auto;
+  background-color: grey;
 }
 
-.playlisty-list {
-  overflow-y: auto;
+/* Main content */
+.main-content {
   height: 100%;
+  width: calc(100% - 300px);
+  overflow-y: auto;
+  padding: 20px;
+  margin-left: 300px;
+  background-color: yellow;
+}
+.upgrade {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 80px;
+  width: calc(100% - 300px);
+  padding: 20px;
+  background-color: rgba(0,0,0,0.7);
+}
+
+/* FOOTER */
+footer {
+  position: fixed;
+  bottom: 0;
+  height: 80px;
+  width: 100%;
+  background-color: red;
 }
